update name and description.

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta charset="utf-8">
   <!-- Title, Description and Keywords -->
-  <title>Malinda</title>
+  <title>Andy Wang - Professional Ruby on Rails Engineer, Senior Web Developer.</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
-  <meta name="keywords" content="">
-  <meta name="author" content="">
+  <meta name="keywords" content="Ruby, Rails, Ruby On Rails, Javascript, Web Development">
+  <meta name="author" content="Andy Wang">
 
   <link href='http://fonts.googleapis.com/css?family=Coda' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
@@ -44,8 +44,8 @@
 			<div class="span12">
 				<!-- Logo or Name section -->
 				<div class="logo">
-					<p class="lmain">Harrison Ford</p>
-					<p class="lsub">professional web designer and developer</p>
+					<p class="lmain">Andy Wang</p>
+					<p class="lsub">professional web developer, senior Ruby/Rails engineer.</p>
 				</div>
 			</div>
 		</div>
