update some personal information in about section

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta charset="utf-8">
   <!-- Title, Description and Keywords -->
-  <title>Andy Wang - Professional Ruby on Rails Engineer, Senior Web Developer.</title>
+  <title>Andy Wang - Professional Ruby on Rails Engineer, Senior Web Application Developer.</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
+  <meta name="description" content="Professional Ruby on Rails Engineer, Senior Web Developer.">
   <meta name="keywords" content="Ruby, Rails, Ruby On Rails, Javascript, Web Development">
   <meta name="author" content="Andy Wang">
 
@@ -90,9 +90,9 @@
 			<div class="span10 offset1">
 				<!-- Important liks like vcard download, phone number and contact details -->
 				<div class="cta">
-					<a href="#"><i class="icon-download"></i> Downloady My vCard</a> 
-					<a href="#"><i class="icon-phone"></i> 123-456-7890</a> 
-					<a href="#"><i class="icon-envelope"></i> Contact Me Now</a> 
+					<a href="github.com/yorzi"><i class="icon-download"></i> github.com/yorzi</a>
+					<a href="#"><i class="icon-envelope"></i> wangyaodi [at] gmail.com</a>  
+					<a href="#"><i class="icon-phone"></i> +86 133-7902-6514</a> 
 				</div>
 			</div>
 		</div>
@@ -179,13 +179,16 @@
 					<img src="img/pic.jpg" alt="" class="profile"/>
 					<!-- Social media icons -->
 					<div class="social-icons">
-						<a href="#" data-original-title="Facebook" class="tip"><i class="icon-facebook"></i></a>
-						<a href="#" data-original-title="Twitter" class="tip"><i class="icon-twitter"></i></a>
-						<a href="#" data-original-title="Linkedin" class="tip"><i class="icon-linkedin"></i></a>
-						<a href="#" data-original-title="Google Plus" class="tip"><i class="icon-google-plus"></i></a>
+						<a href="http://cn.linkedin.com/in/yorzi" data-original-title="Linkedin" class="tip"><i class="icon-linkedin"></i></a>
+						<a href="https://plus.google.com/108320517625960982177/about?hl=en" data-original-title="Google Plus" class="tip"><i class="icon-google-plus"></i></a>
+						<a href="http://www.twitter.com/yorzi" data-original-title="Twitter" class="tip"><i class="icon-twitter"></i></a>
+						<a href="http://www.facebook.com/andy.wang.54772728" data-original-title="Facebook" class="tip"><i class="icon-facebook"></i></a>
 					</div>
 					<!-- Para -->
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean at mauris metus. Duis interdum magna sit amet orci euismod id elementum metus posuere. Nam at augue quam, sit amet tristique tellus. Nunc enim eros, imperdiet ultrices rhoncus non, scelerisque vel justo. Quisque convallis aliquam tincidunt. Aenean nec lectus blandit lectus pellentesque posuere eget id nisl. Praesent at neque libero. Phasellus feugiat <a href="#">elementum arcu</a>, non faucibus elit sodales nec. Quisque convallis aliquam tincidunt. Aenean nec lectus blandit lectus pellentesque posuere eget id nisl. Mauris consectetur varius dui nec sollicitudin. Donec a enim justo. Proin nec convallis tellus. Praesent at neque libero. Phasellus feugiat elementum arcu, non faucibus elit sodales nec.</p>
+					<p><span>I currently work for <a href="http://www.intridea.com" target="_blank">Intridea</a> as a Sr. Ruby/Rails Engineer. I was also a project manager and skilled communicator to clients in previous jobs. I've got over 7-year's experience on web application development, and been using&nbsp;<a href="http://www.rubyonrails.org/">Ruby on Rails</a>&nbsp;for over 5 years, I'm good at business logic designing and product moduling.&nbsp;</span></p>
+          <p>I write&nbsp;<a href="http://tech.wangyaodi.com" target="_blank">Tech Blog</a>&nbsp;and&nbsp;<a href="http://blog.wangyaodi.com" target="_blank">Life Stream</a>&nbsp;for many years. I'm enthusiastic about OpenSource projects and worked some around on&nbsp;<a href="http://github.com/yorzi" target="_blank">github</a>. Meanwhile, I am the organizor of RailsWed and VeryCoding.</p>
+          <p>Proudly, as a sports lover, I ever finished 2008 Beijing Marathon full competition and finished a cycling travel in Jul. 2003 from Beijing to Xi'an, between which the distance is more than 1300kms. In my spare time, I love playing basketball and watching football.</p>
+          
 					<div class="clearfix"></div>
 				</div>
 				<!-- Resume section with green background. -->
@@ -350,15 +353,15 @@
 		<div class="row">
 			<div class="span4">
 				<!-- Copyright info -->
-				<p>Copyright &copy; 2012 - <a href="#">Harrison Ford</a></p>
+				<p>Copyright &copy; 2012</p>
 			</div>
 			<div class="span3 offset5">
 				<!-- Social media icons -->
 				<div class="social">
-					<a href="#" class="facebook"><i class="icon-facebook"></i></a>
-					<a href="#" class="twitter"><i class="icon-twitter"></i></a>
-					<a href="#" class="linkedin"><i class="icon-linkedin"></i></a>
-					<a href="#" class="google-plus"><i class="icon-google-plus"></i></a>
+					<a href="http://cn.linkedin.com/in/yorzi" class="linkedin"><i class="icon-linkedin"></i></a>
+					<a href="https://plus.google.com/108320517625960982177/about?hl=en" class="google-plus"><i class="icon-google-plus"></i></a>
+					<a href="http://www.twitter.com/yorzi" class="twitter"><i class="icon-twitter"></i></a>
+					<a href="http://www.facebook.com/andy.wang.54772728" class="facebook"><i class="icon-facebook"></i></a>
 				</div>
 			</div>
 		</div>
