add skill and experience information. simplify the page structure.

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 			<div class="span10 offset1">
 				<!-- Important liks like vcard download, phone number and contact details -->
 				<div class="cta">
-					<a href="github.com/yorzi"><i class="icon-download"></i> github.com/yorzi</a>
+					<a href="http://www.github.com/yorzi"><i class="icon-download"></i> github.com/yorzi</a>
 					<a href="#"><i class="icon-envelope"></i> wangyaodi [at] gmail.com</a>  
 					<a href="#"><i class="icon-phone"></i> +86 133-7902-6514</a> 
 				</div>
@@ -125,28 +125,6 @@
 								<p class="top">Resume</p>
 								<p class="bor"></p>
 								<p class="bot">Skills and Experience</p>
-							</a>							
-						</div>
-						<div class="clearfix"></div>
-					</div>
-					<!-- Navigation #3 -->
-					<div class="box">
-						<div class="box-b box-d">
-							<a href="#location" class="anchorLink" id="content-b">
-								<p class="top">Portfolio</p>
-								<p class="bor"></p>
-								<p class="bot">What i did in past</p>
-							</a>						
-						</div>
-						<div class="clearfix"></div>
-					</div>
-					<!-- Navigation #4 -->
-					<div class="box">
-						<div class="box-y box-d">
-							<a href="#location" class="anchorLink" id="content-y">
-								<p class="top">Contact Me</p>
-								<p class="bor"></p>
-								<p class="bot">How to contact me</p>
 							</a>							
 						</div>
 						<div class="clearfix"></div>
@@ -207,9 +185,9 @@
 							<div class="span8">
 								<!-- Information -->
 								<div class="rcontent">
-									<h4>K.L.N. College of Engineering, Madurai</h4>
-									<p class="tag">B.Tech (Information Technology) - 2003-2017 - 89%</p>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vulputate eros nec odio egestas in dictum nisi vehicula. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse porttitor luctus imperdiet.</p>
+									<h4>Beijing Technology & Business University</h4>
+									<p class="tag">Bachelor in Computer Science, Sep.2001-Jul.2005</p>
+									<p></p>
 								</div>							
 							</div>
 						</div>
@@ -220,112 +198,65 @@
 							</div>
 							<div class="span8">
 								<div class="rcontent">
-									<h4>Web Designer/Developer</h4>
-									<p class="tag">Stuffs I Know</p>
+									<h4>Senior Ruby/Rails Engineer</h4>
+									<p class="tag">My skills' tags about technology:</p>
 									<!-- Each skill should be enclosed inside "span" tag with class "skill". -->
-									<span class="skill">HTML5</span> <span class="skill">CSS3</span> <span class="skill">JavaScript</span> <span class="skill">jQuery</span> <span class="skill">BootStrap</span> <span class="skill">WordPress</span> <span class="skill">Photoshop</span> <span class="skill">PHP/MySQL</span> <span class="skill">CodeIgniter</span>
+									<span class="skill">Ruby on Rails</span>
+									<span class="skill">rSpec</span> 
+									<span class="skill">JavaScript</span>
+									<span class="skill">CoffeeScript</span>
+									<span class="skill">Backbone</span>
+									<span class="skill">Project Management</span>
+									<span class="skill">Deployment</span>
+									<span class="skill">System Admin</span>
+									<span class="skill">MySQL</span>
+									<span class="skill">Git</span>
+									<span class="skill">Titanium</span>
+									<span class="skill">jQuery</span> 
+									<span class="skill">BootStrap</span> 
+									<span class="skill">HTML5</span> 
+									<span class="skill">CSS3</span>
 								</div>								
 							</div>
 						</div>							
 						<div class="border"></div>
 						<div class="row">
 							<div class="span3">
-								<h3>Work Experience</h3>
+								<h3>Experience</h3>
 							</div>
 							<div class="span8">
 								<div class="rcontent">
-									<h4>Google Inc, London</h4>
-									<p class="tag">Project Manager - 2009-2011</p>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vulputate eros nec odio egestas in dictum nisi vehicula. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse porttitor luctus imperdiet.</p>
+									<h4>Intridea Inc, Washington DC</h4>
+									<p class="tag">Senior Ruby/Rails Engineer - March.2011-present</p>
+									<p>• Managed and worked on Pooway project, implemented a complicated SNS platform for Nutrition Sharing and Suggestions from all perspectives. (Rails3.0. Oct.2010-Mar.2011)</p>
+                  <p>• Worked on Safeway’s Answer project as core engineer, implemented Quora-like SNS application from all perspectives. (Rails3.0, JS are involved. Mar.2011-May.2011)</p>
+                  <p>• Worked on RecNation project as core engineer, implemented a complex group/event/people/place based SNS platform. (Rails3.1, CS/JS. Jul.2011-Oct.2011)</p>
+                  <p>• Worked on Bolstr project as core engineer, implemented a management platform for campaign/investment related business. (Rails3.1, CS/JS. Aug.2011-Dec.2011)</p>
+                  <p>• Worked on PEW project, Data analysis and comparing charts etc. (Rails3.1, CS/JS, PostGIS. Dec.2011-present</p>
+								</div>
+								<hr>
+								<div class="rcontent">
+									<h4>Idapted Ltd (Eleutian Inc.), Beijing, China</h4>
+									<p class="tag">Senior R&D Project Manager - Feb.2008-Feb.2011</p>
+									<p>• Lead a research and development of a core study process for Eleutian online training, response to production team and sales team with great efficiency. (From 2008 to 2011)</p>
+                  <p>• Iterated involving learning systems three times in past three years, co-worked with all team members for a world level Ruby on Rails platform, advantages of the platform were discussed in RailsConf2010. (From early 2008 to middle 2010)</p>
+                  <p>• Managed and directed more than 6 applications in a 4-member team, reported to CTO directly with system level solutions and business logic improvements. (From 2009 to 2011)</p>
+                  <p>• Worked on projects plan and resource balance among different projects, it drives all different parts moving forward smoothly. (Mainly in year 2010)</p>
+                  <p>• Drove internal working process and efficiency mechanism with ideas and efforts, to help whole company moving to a good profession. (Whole life in this company, from 2008 to 2011)</p>
+                  <p>• Travel to Korea for a LMS project with IGSE/SDU, gained successful business targets from the Korean Customers as Senior R&D Manger. (Dec.2010)</p>
+								</div>
+								<hr>
+								<div class="rcontent">
+									<h4>Beijing Sorun Computer Co., Ltd., Beijing, China</h4>
+									<p class="tag">Software Engineer/Bridge programmer - Aug.2005- Feb.2008</p>
+									<p>• Programmed and maintained an enterprise product adaptation and management web system. Communicated with bridge engineers and recommended solutions of system architecture designing. (C#, ASP.NET, Oracle9i involved. Sep.2007-Dec.2007)</p>
+                  <p>• Designed and implemented a customer data analysis graph system as a team leader of three members. (JAVA, MYSQL, Struts2, JSP, JFreeChart involved. Jul.2007-Aug.2007)</p>
+                  <p>• Programmed a trade product report exportation system installed online as both a software engineer and a tester. (C#, ActiveReports2.0, ASP.NET, Oracle10g involved. Oct.2006-Jun.2007)</p>
+                  <p>• Developed and implemented an Information Management System with a team of five people. (JAVA, JSF, SVF, JSP, DB2 involved. Dec.2005-Mar.2006)</p>
+                  <p>• Participated in several trainings and company learning classes, including outside wild training for effective cooperation and communication, potential training for self development, work flow training for gaining a CMMI3 qualification etc. as well as a Japanese learning lessons, program technologies (C#, JAVA, OOP principles) and UML classes. (Aug.2005-Dec.2007)</p>
 								</div>								
 							</div>
 						</div>						
-					</div>
-				</div>
-				<!-- Portfolio section with blue background -->
-				<div class="content-b content-d">
-					<h2>Portfolio</h2>
-					<div class="border"></div>					
-					<!-- I am using prettyPhoto plugin. Full size image should be given side <a> tag and thumbnail size image should be given inside <img> tag. Don't forget the class "prettyPhoto[pp_gal]" in <a> tag. -->
-					<div class="portfolio">
-						<a href="img/photos/1.jpg" class="prettyPhoto[pp_gal]"><img src="img/photos/tn_1.jpg" alt="" /></a>
-						<a href="img/photos/2.jpg" class="prettyPhoto[pp_gal]"><img src="img/photos/tn_2.jpg" alt="" /></a>
-						<a href="img/photos/3.jpg" class="prettyPhoto[pp_gal]"><img src="img/photos/tn_3.jpg" alt="" /></a>
-						<a href="img/photos/4.jpg" class="prettyPhoto[pp_gal]"><img src="img/photos/tn_4.jpg" alt="" /></a>
-						<a href="img/photos/5.jpg" class="prettyPhoto[pp_gal]"><img src="img/photos/tn_5.jpg" alt="" /></a>
-						<a href="img/photos/6.jpg" class="prettyPhoto[pp_gal]"><img src="img/photos/tn_6.jpg" alt="" /></a>
-						<a href="img/photos/7.jpg" class="prettyPhoto[pp_gal]"><img src="img/photos/tn_7.jpg" alt="" /></a>
-						<a href="img/photos/8.jpg" class="prettyPhoto[pp_gal]"><img src="img/photos/tn_8.jpg" alt="" /></a>
-					</div>
-				</div>
-				<!-- Contact section with yellow background -->
-				<div class="content-y content-d">
-					<h2>Contact Me</h2>
-					<div class="border"></div>					
-					<div class="contact">
-						<div class="row">
-							<div class="span6">
-								<!-- Contact form -->
-								<div class="form">
-								  <form class="form-horizontal">
-									  <div class="control-group">
-										<label class="control-label" for="name">Name</label>
-										<div class="controls">
-										  <input type="text" class="input-medium" id="name">
-										</div>
-									  </div>
-									  <div class="control-group">
-										<label class="control-label" for="email">Email</label>
-										<div class="controls">
-										  <input type="text" class="input-medium" id="email">
-										</div>
-									  </div>
-									  <div class="control-group">
-										<label class="control-label" for="website">Website</label>
-										<div class="controls">
-										  <input type="text" class="input-medium" id="website">
-										</div>
-									  </div>
-									  <div class="control-group">
-										<label class="control-label" for="comment">Comment</label>
-										<div class="controls">
-										  <textarea class="input-madium" id="comment" rows="3"></textarea>
-										</div>
-									  </div>
-									  <div class="form-actions">
-										<button type="submit" class="btn">Submit</button>
-										<button type="reset" class="btn">Reset</button>
-									  </div>
-								  </form>
-								</div>
-							</div>
-							<div class="span5">
-								<!-- Google maps -->
-								<div class="gmap">
-								  <iframe height="175" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.co.in/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Hampton+Court+Palace,+East+Molesey,+United+Kingdom&amp;aq=2&amp;oq=London&amp;sll=9.930582,78.12303&amp;sspn=0.192085,0.308647&amp;ie=UTF8&amp;hq=Hampton+Court+Palace,+East+Molesey,+United+Kingdom&amp;ll=51.404615,-0.341578&amp;spn=0.013921,0.032015&amp;t=m&amp;output=embed"></iframe>
-							   </div>
-							   <div class="border"></div>
-							   <!-- Address -->
-							   <div class="address">
-								  <div class="row">
-									 <div class="span3">
-										<address>
-										  <span class="color bold company">Your Company, Inc.</span><br>
-										  795 Folsom Ave, Suite 600<br>
-										  San Francisco, CA 94107<br>
-										</address>
-									 </div>
-									 <div class="span2">
-										<address>
-										  <span class="color bold company">Your Name</span><br>
-										  <a href="mailto:#">first.last@gmail.com</a><br>
-										  <abbr title="Phone">P:</abbr> (123) 456-7890
-										</address>
-									 </div>
-								  </div>
-							   </div>
-							</div>
-						</div>
 					</div>
 				</div>
 			</div>
