update personal profile image.

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 					<!-- Border -->
 					<div class="border"></div>
 					<!-- Your pic with class "profile" -->
-					<img src="img/pic.jpg" alt="" class="profile"/>
+					<img src="img/andy.png" alt="" class="profile"/>
 					<!-- Social media icons -->
 					<div class="social-icons">
 						<a href="http://cn.linkedin.com/in/yorzi" data-original-title="Linkedin" class="tip"><i class="icon-linkedin"></i></a>
