--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <link href="style/bootstrap-responsive.css" rel="stylesheet">
 
   <!-- Favicon -->
-  <link rel="shortcut icon" href="img/favicon/favicon.png">
+  <link rel="shortcut icon" href="img/favicon/favicon.ico">
 </head>
 
 <body>
